--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,23 @@ name = "threedge"
 version = "0.1.0"
 authors = ["John-John Tedro <udoprog@tedro.se>"]
 
+[features]
+default = ["gfx-vulkan"]
+gfx-vulkan = ["vulkano", "vulkano-shader-derive", "vulkano-win"]
+
 [dependencies]
-vulkano = "0.6"
-vulkano-shader-derive = "0.6"
-vulkano-win = "0.6"
 winit = "*"
 cgmath = "0.15"
+error-chain = "*"
+
+[dependencies.vulkano]
+version = "0.6"
+optional = true
+
+[dependencies.vulkano-shader-derive]
+version = "0.6"
+optional = true
+
+[dependencies.vulkano-win]
+version = "0.6"
+optional = true
