support complex primitives

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,12 @@ shuteye = "^0"
 log = "0.3"
 env_logger = "0.4"
 lazy_static = "0.2"
-gltf = "0.9"
 gltf-utils = "0.1"
 gltf-importer = "0.9"
+
+[dependencies.gltf]
+version = "0.9"
+features = ["names"]
 
 [dependencies.vulkano]
 version = "0.6"
